[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.42.1",
    "alpaca-trade-api>=0.48",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "yfinance>=0.2.65",
]
